subtitle overlapping fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -52,7 +52,7 @@ h1 {
     font-weight: 600;
     line-height: 55px;
     margin: 0 0 10px;
-    color: #263a4f;
+    color: #fff;
 }
 h2 {
     font-size: 32px;
@@ -89,8 +89,7 @@ ul {
     padding: 0;
     margin: 0;
 }
-p, li, a, span {
-}
+
 p {
     font-size: 15px;
     line-height: 26px;
